# 524_group29_webscraping

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
524_group29_webscraping/: CONTRIBUTING.md  README.md  pyproject.toml
524_group29_webscraping/docs/: conf.py  example.ipynb  make.bat
docs/: Makefile  example.ipynb
docs/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
src/524_group29_webscraping/: __init__.py  fetch_html.py  parse_content.py
src/_524_group29_webscraping/: __init__.py  save_data.py
src/dsci524_group29_webscraping/: __init__.py  fetch_html.py  parse_content.py  save_data.py  tutorial.ipynb
tests/: test_524_group29_webscraping.py  test_fetch_html.py  test_parse.py  test_parse_content.py  test_save_data.py
